Fixed scrollbar

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 .wrapper {
   width: 100%;
+  height: 100%;
   display: grid;
   grid-template-rows: 80px 80px auto;
   grid-template-areas: 
@@ -11,6 +12,8 @@
 body {
   padding: 0;
   margin: 0;
+  height: 100vh;
+  overflow: hidden;
   background-color: wheat;
 }
 
@@ -39,7 +42,7 @@ nav {
 
 nav > ul {
   display: grid;
-  grid-template-columns: 1fr 1fr 2fr 2fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 60px;
   text-align: center;
 }
